fix product card overflow

--- a/app/assets/stylesheets/components/_cardproduct.scss
+++ b/app/assets/stylesheets/components/_cardproduct.scss
@@ -2,7 +2,7 @@
   overflow: hidden;
   height: 120px;
   background: $mwhite;
-  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   display: flex;
   align-items: center;
   border-radius: 25px;
@@ -15,12 +15,12 @@
 
   margin: 5px;
 
-  transition: box-shadow .2s ease-in-out;
-  &:hover{
-    box-shadow: 0 0 5px $mred
+  transition: box-shadow 0.2s ease-in-out;
+  &:hover {
+    box-shadow: 0 0 5px $mred;
   }
 }
-  
+
 .card-product img {
   height: 100%;
   width: 120px;
@@ -28,20 +28,31 @@
 }
 
 .card-product h2 {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
   margin: 0;
 }
 
 .card-product p {
-  font-size: 12px;
+  font-size: 10px;
   line-height: 1.4;
-  opacity: .7;
+  opacity: 0.7;
   margin-bottom: 0;
   margin-top: 8px;
 }
 
-.card-product p + .bottom{
+.card-product-infos {
+  overflow: hidden;
+}
+
+.card-product p:not(.bottom) {
+  height: 50px;
+  overflow-y: scroll;
+  margin-right: -50px;
+  padding-right: 50px;
+}
+
+.card-product p + .bottom {
   text-align: end;
 }
 
@@ -49,5 +60,3 @@
   padding: 16px;
   width: 100%;
 }
-
-
